# openfront-mapmaker

./: .gitattributes  .gitignore  LOCAL-SETUP.md  OpenFrontMapGenerator.py  OpenFront_Palette.qml  README.md  Start-MapMaker.bat  Start-MapMaker.command  pyproject.toml
StylisedMaps/Cyprus/: Cyprus.json
StylisedMaps/Palm Island/: Palm Island.json
StylisedMaps/Philippines/: Philippines.json
StylisedMaps/United Kingdom/: United Kingdom.json
scripts/: map_generator.py
webapp/: .env.example  README.md  app.py  install_to_game.py  map_processor.py  pyproject.toml  render.yaml  requirements.txt
webapp/static/: index.html
