[project]
name = "openfront-mapmaker-scripts"
version = "0.1.0"
description = "Standalone OpenFront map tooling — turns a styled DEM PNG into game-ready terrain files (scripts/map_generator.py)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy",
    "Pillow",
    "scipy",
]

[tool.uv]
# Runnable scripts, not an installable library.
package = false
