[project]
name = "openfront-mapmaker-webapp"
version = "0.1.0"
description = "OpenFront Map Generator web app — turns DEM data into styled OpenFront terrain maps"
# rasterio/fiona/numpy pins below only ship wheels through 3.12; cap out 3.13+ so
# the launcher never falls back to a too-new interpreter and tries to build from source.
requires-python = ">=3.11,<3.13"
dependencies = [
    # Flask backend
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "gunicorn==21.2.0",
    # GIS processing (replaces QGIS)
    "rasterio==1.3.9",
    "fiona==1.9.5",
    "numpy==1.26.2",
    "Pillow==10.1.0",
    "requests==2.31.0",
    "shapely==2.0.2",
    "pyproj==3.6.1",
    "scipy==1.11.4",
    # Supabase authentication
    "supabase==2.3.0",
    # Utilities
    "python-dotenv==1.0.0",
]

[tool.uv]
# This is a runnable app, not an installable library — don't try to build it as a package.
package = false
